[package]
name = "cinecam2d"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Abe M"]
description = "A 2D camera library for games and other interactive applications."
keywords = ["camera", "2d", "game", "graphics", "interactive", "bevy", "gamedev"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"

[dependencies.noise]
version = "0.8.2"
optional = true

[features]
shake = ["noise"]
zoom = []
pan = []
bound = []
