[package]
name = "cinecam2d"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Abe M"]
description = "A 2D camera library for games and other interactive applications."
keywords = [
    "camera",
    "2d",
    "game",
    "graphics",
    "interactive",
    "bevy",
    "gamedev",
]
readme = "README.md"
exclude = ["assets/**/*", ".github/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
noise = { version = "0.8.2", optional = true }

[features]
shake = ["dep:noise"]
zoom = []
pan = []
bound = []

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "bound"
path = "examples/bound.rs"

[[example]]
name = "focus"
path = "examples/focus.rs"
